<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Which Club</string>
    <string name="NewRound">Start A New Round</string>
    <string name="FindCourse">Find A Course</string>
    <string name="CourseName">Course Name</string>
    <string name="Person">Player</string>
    <string name="Start">Start</string>
    <string name="UnderConstruction">Under Construction</string>
    <string name="LoadingStats">Loading Statistics ...</string>
    <string name="BeginTeeShot">Start Tee Shot</string>
    <string name="Par">Par</string>
    <string name="Handicap">Handicap</string>
    <string name="Distance">Distance</string>
    <string name="Next">Next</string>
    <string name="Prev">Prev</string>
    <string name="SelectHole">Select Hole</string>
    <string name="Unknown">Unknown</string>
    <string name="HoleNumber">Hole #</string>

    <string-array name="Pars">
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
    </string-array>
<string name="NextShot">Next Shot</string>
<string name="SkipShot">Skip Shot</string>
<string name="DistanceBackGreen">Distance to Back of Green</string>
<string name="DistanceMiddleGreen">Distance to Middle of Green</string>
<string name="DistanceFrontGreen">Distance to Front of Green</string>
<string name="Putt">Putt</string>
<string name="DistanceShot">Distance of Current Shot</string>
<string name="Cancel">Cancel</string>
<string name="ChooseClub">Choose A Club</string>
</resources>
